Fix compilation on HP-UX 11.11.

Error was:
thread/qthread_unix.cpp: In static member function 'static int QThread::idealThreadCount()':
thread/qthread_unix.cpp:325: error: aggregate 'pst_dynamic psd' has incomplete type and cannot be defined
thread/qthread_unix.cpp:326: error: 'pstat_getdynamic' was not declared in this scope

Task-number: QTBUG-6576
Reviewed-by: Thiago Macieira <thiago.macieira@nokia.com>